--- a/Cheminformatics_DC.ipynb
+++ b/Cheminformatics_DC.ipynb
@@ -47,7 +47,8 @@
         "import torch.optim as optim\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.metrics import accuracy_score\n",
-        "print(\"hi\")\n",
+        "\n",
+        "print(\"These changes should not touched by anyone\")\n",
         "#load data with urls\n",
         "url1='https://raw.githubusercontent.com/shreekar2005/Cheminformatics_DC/refs/heads/main/DATASET_sorted/TRAIN_dense/tox21_dense_train.csv'\n",
         "url2='https://raw.githubusercontent.com/shreekar2005/Cheminformatics_DC/refs/heads/main/DATASET_sorted/TRAIN_dense/tox21_labels_train.csv'\n",
