changes from shreekar

--- a/Cheminformatics_DC.ipynb
+++ b/Cheminformatics_DC.ipynb
@@ -21,19 +21,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
-          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "wq_DhKYRbDgn",
-        "outputId": "140ea62b-cac4-4b33-b603-56d4bdb9fb57"
+        "outputId": "ffd5e90e-0d71-4be3-8347-4a1f8f62b057"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "cuda\n"
           ]
@@ -47,8 +46,9 @@
         "import torch.optim as optim\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.metrics import accuracy_score\n",
+        "print(\"changes from shreekar\")\n",
         "\n",
-        "print(\"These changes should not touched by anyone\")\n",
+        "\n",
         "#load data with urls\n",
         "url1='https://raw.githubusercontent.com/shreekar2005/Cheminformatics_DC/refs/heads/main/DATASET_sorted/TRAIN_dense/tox21_dense_train.csv'\n",
         "url2='https://raw.githubusercontent.com/shreekar2005/Cheminformatics_DC/refs/heads/main/DATASET_sorted/TRAIN_dense/tox21_labels_train.csv'\n",
@@ -131,11 +131,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "N9LOhR6tsuhG"
       },
       "outputs": [],
@@ -167,25 +164,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
-          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "42cPfo6gs82_",
-        "outputId": "73363e63-6651-44ce-b9fc-7d035c726e40"
+        "outputId": "12a149e7-ef3b-490a-fecf-c39ed13def5b"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Epoch 0, Loss: 0.6854\n",
-            "Epoch 10, Loss: 0.3613\n",
-            "Epoch 20, Loss: 0.2439\n",
-            "Epoch 30, Loss: 0.2030\n",
-            "Epoch 40, Loss: 0.1804\n"
+            "Epoch 0, Loss: 0.6713\n",
+            "Epoch 10, Loss: 0.3579\n",
+            "Epoch 20, Loss: 0.2373\n",
+            "Epoch 30, Loss: 0.1946\n",
+            "Epoch 40, Loss: 0.1774\n"
           ]
         }
       ],
@@ -217,21 +213,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
-          "background_save": true,
           "base_uri": "https://localhost:8080/"
         },
         "id": "j15bFN5stDtl",
-        "outputId": "a19e79d0-6d69-4b6f-b0f7-65d3d3ddb7ee"
+        "outputId": "8ce30419-434d-4f7d-f64a-c7f3b014e04e"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Test Loss: 0.2082\n",
+            "Test Loss: 0.2064\n",
             "\n",
             "Accuracy for each label:\n",
             "NR.AhR: 0.8872\n",
@@ -244,7 +239,7 @@
             "SR.ARE: 0.8563\n",
             "SR.ATAD5: 0.9413\n",
             "SR.HSE: 0.9660\n",
-            "SR.MMP: 0.9057\n",
+            "SR.MMP: 0.8980\n",
             "SR.p53: 0.9366\n"
           ]
         }
@@ -282,11 +277,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "71MJULV4ocnh"
       },
       "outputs": [],
@@ -323,11 +315,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "W_448ySqzBh4"
+        "id": "W_448ySqzBh4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "ee285c39-bd98-479f-e0a9-9937228ffe03"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'numpy.ndarray' object has no attribute 'columns'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-c2ba107504d9>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Compute accuracy per label\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mlabel_accuracies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mcorrect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mlabel_accuracies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcorrect\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'columns'"
+          ]
+        }
+      ],
       "source": [
         "# Train custom KNN model\n",
         "knn = KNNClassifier(k=5)\n",
@@ -361,35 +370,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oH4T7aLVhwcc",
-        "outputId": "eb269da5-eae1-49a2-a65d-68d00fb35f58"
+        "id": "oH4T7aLVhwcc"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "File is not in Matrix Market format. Trying to read as CSV.\n",
-            "        %%MatrixMarket matrix coordinate integer general\n",
-            "0                                   12060 272776 3913072\n",
-            "1                                                  1 1 4\n",
-            "2                                                  4 1 2\n",
-            "3                                                  7 1 1\n",
-            "4                                                 20 1 2\n",
-            "...                                                  ...\n",
-            "3913068                                   12058 270072 1\n",
-            "3913069                                   12058 270073 1\n",
-            "3913070                                   12060 270074 1\n",
-            "3913071                                   12060 270075 1\n",
-            "3913072                                   12060 270076 1\n",
-            "\n",
-            "[3913073 rows x 1 columns]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from scipy.io import mmread\n",
