--- a/Cheminformatics_DC_bert.ipynb
+++ b/Cheminformatics_DC_bert.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1pWwMCGxnxa64CEKC4Byhted0fCd5oMU7",
-      "authorship_tag": "ABX9TyMtzgREqq+mWHvzzw3aysu9",
+      "mount_file_id": "https://github.com/shreekar2005/Cheminformatics_DC/blob/main/Cheminformatics_DC_bert.ipynb",
+      "authorship_tag": "ABX9TyOUcxApQorkJMxxO5cK94rT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,28 +29,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 356
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ER2Ye-xKlT6S",
-        "outputId": "e53112bf-896a-4bb4-c9a0-3d54728db42a"
+        "outputId": "a78be9ef-ea86-4886-a88b-393b71a1a750"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "boolean column index has incorrect length: 1 instead of 272776",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-18df9a5404d4>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;31m# Ensure sparse_col_idx has the correct length and applies correctly\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mx_tr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx_tr_dense\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_tr_sparse\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msparse_col_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0mx_te\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx_te_dense\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_te_sparse\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msparse_col_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;31m# Convert to PyTorch tensors on CPU\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/scipy/sparse/_index.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m         \u001b[0mrow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_indices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0;31m# Dispatch to specialized methods.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/scipy/sparse/_index.py\u001b[0m in \u001b[0;36m_validate_indices\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    193\u001b[0m                 \u001b[0mcol\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbool_col\u001b[0m \u001b[0;34m:=\u001b[0m \u001b[0m_compatible_boolean_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 195\u001b[0;31m             \u001b[0mcol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_validate_bool_idx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbool_col\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"column\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    196\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mslice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m             \u001b[0mcol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_asindices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/scipy/sparse/_index.py\u001b[0m in \u001b[0;36m_validate_bool_idx\u001b[0;34m(idx, axis_size, axis_name)\u001b[0m\n\u001b[1;32m    169\u001b[0m         ) -> npt.NDArray[np.int_]:\n\u001b[1;32m    170\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0maxis_size\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 171\u001b[0;31m                 raise IndexError(\n\u001b[0m\u001b[1;32m    172\u001b[0m                     \u001b[0;34mf\"boolean {axis_name} index has incorrect length: {len(idx)} \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    173\u001b[0m                     \u001b[0;34mf\"instead of {axis_size}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: boolean column index has incorrect length: 1 instead of 272776"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "272776\n",
+            "(12060, 801) (12060, 272776)\n",
+            "(12060, 1644)\n",
+            "(12060, 12)\n",
+            "torch.Size([12060, 1644])\n",
+            "torch.Size([647, 1644])\n",
+            "NR.AhR: Training valid samples = 8441, Testing valid samples = 610\n"
           ]
         }
       ],
@@ -73,17 +71,21 @@
         "x_tr_sparse = io.mmread('drive/MyDrive/DATASET/tox21_sparse_train.mtx.gz').tocsc()\n",
         "x_te_sparse = io.mmread('drive/MyDrive/DATASET/tox21_sparse_test.mtx.gz').tocsc()\n",
         "\n",
-        "# Filter out very sparse features and combine\n",
-        "sparse_col_idx = ((x_tr_sparse > 0).mean(axis=0) > 0.05).ravel()\n",
-        "\n",
-        "# Ensure sparse_col_idx has the correct length and applies correctly\n",
+        "# filter out very sparse features\n",
+        "sparse_col_idx = ((x_tr_sparse > 0).mean(0) > 0.05).A.ravel()\n",
+        "print(sparse_col_idx.size)\n",
         "x_tr = np.hstack([x_tr_dense, x_tr_sparse[:, sparse_col_idx].toarray()])\n",
         "x_te = np.hstack([x_te_dense, x_te_sparse[:, sparse_col_idx].toarray()])\n",
+        "\n",
+        "print(x_tr_dense.shape, x_tr_sparse.shape)\n",
+        "print(x_tr.shape)\n",
+        "print(y_tr.shape)\n",
         "# Convert to PyTorch tensors on CPU\n",
         "device = torch.device(\"cpu\")\n",
         "x_tr_tensor = torch.tensor(x_tr, dtype=torch.float32)\n",
         "x_te_tensor = torch.tensor(x_te, dtype=torch.float32)\n",
-        "\n",
+        "print(x_tr_tensor.shape)\n",
+        "print(x_te_tensor.shape)\n",
         "# Define Transformer Model (CPU version)\n",
         "class TabularTransformer(nn.Module):\n",
         "    def __init__(self, input_dim, embed_dim=32, num_heads=2, num_layers=2, num_classes=1):\n",
@@ -105,17 +107,20 @@
         "        x = torch.cat([cls_tokens, x], dim=1)\n",
         "        x = self.transformer(x)\n",
         "        cls_output = x[:, 0, :]\n",
-        "        return torch.sigmoid(self.classifier(cls_output).squeeze(-1))\n",
+        "        return self.classifier(cls_output).squeeze(-1)\n",
         "\n",
         "# Store all confusion matrices and AUCs\n",
         "conf_matrices = {}\n",
         "aucs = {}\n",
         "\n",
         "# Train and evaluate for each target\n",
+        "# Train and evaluate for each target\n",
         "for target in y_tr.columns:\n",
         "    # Filter rows with non-missing labels\n",
         "    rows_tr = y_tr[target].notna().values\n",
         "    rows_te = y_te[target].notna().values\n",
+        "\n",
+        "    print(f\"{target}: Training valid samples = {sum(rows_tr)}, Testing valid samples = {sum(rows_te)}\")\n",
         "\n",
         "    if sum(rows_tr) == 0 or sum(rows_te) == 0:\n",
         "        print(f\"Skipping {target} due to no valid samples\")\n",
@@ -128,7 +133,7 @@
         "\n",
         "    # Initialize model\n",
         "    model = TabularTransformer(input_dim=x_tr.shape[1], num_classes=1)\n",
-        "    criterion = nn.BCELoss()\n",
+        "    criterion = nn.BCEWithLogitsLoss() # This loss function combines a sigmoid layer with BCELoss\n",
         "    optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
         "\n",
         "    # Training loop\n",
@@ -147,14 +152,22 @@
         "    with torch.no_grad():\n",
         "        test_outputs = model(x_te_tensor[rows_te]).squeeze().numpy()\n",
         "\n",
-        "    # Compute AUC\n",
-        "    auc_te = roc_auc_score(y_te[target][rows_te], test_outputs)\n",
-        "    aucs[target] = auc_te\n",
-        "    print(f\"{target}: AUC = {auc_te:.5f}\")\n",
+        "    # Check for and handle NaN values in test_outputs and y_te[target][rows_te]\n",
+        "    valid_indices = np.isfinite(test_outputs) & y_te[target][rows_te].notna().values\n",
+        "    test_outputs = test_outputs[valid_indices]\n",
+        "    true_labels = y_te[target][rows_te].values[valid_indices]\n",
         "\n",
-        "    # Confusion matrix\n",
-        "    p_te_pred = (test_outputs > 0.5).astype(int)\n",
-        "    conf_matrices[target] = confusion_matrix(y_te[target][rows_te], p_te_pred)\n",
+        "    # Compute AUC only if there are valid samples\n",
+        "    if len(true_labels) > 0:\n",
+        "        auc_te = roc_auc_score(true_labels, test_outputs)\n",
+        "        aucs[target] = auc_te\n",
+        "        print(f\"{target}: AUC = {auc_te:.5f}\")\n",
+        "\n",
+        "        # Confusion matrix\n",
+        "        p_te_pred = (test_outputs > 0.5).astype(int)\n",
+        "        conf_matrices[target] = confusion_matrix(true_labels, p_te_pred)\n",
+        "    else:\n",
+        "        print(f\"Skipping {target} due to no valid samples after NaN removal\")\n",
         "\n",
         "# Plot confusion matrices\n",
         "fig, axes = plt.subplots(3, 4, figsize=(15, 10))\n",
@@ -175,7 +188,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "4Cd0SGKTl7wR"
+        "id": "CZVvmhI89F-d"
       },
       "execution_count": null,
       "outputs": []
