for all classes

--- a/DC2_their_RF.ipynb
+++ b/DC2_their_RF.ipynb
@@ -4,8 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "14Eo4g2XrmCaicg2S_NESb1qgMJcocjPg",
-      "authorship_tag": "ABX9TyM5Zp/O+/JYcdTHf6hXRhIX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +27,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "gpJkYQfafesJ",
+        "outputId": "37c4f2be-9e57-44b5-d57f-bc90d699a831",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QU5LWunAFvPj",
-        "outputId": "e16afb01-54a8-4e1f-bc9c-f02822c26512"
+        "outputId": "afb89ce3-5368-43d1-ed1c-3f71bf47acdc"
       },
       "outputs": [
         {
@@ -58,38 +80,40 @@
             "training of 9 : SR.HSE\n",
             "training of 10 : SR.MMP\n",
             "training of 11 : SR.p53\n",
-            "╒═══════════════════════╤═════════════╤══════════╤════════════╤═══════════╤══════╤══════╤══════╤══════╕\n",
-            "│ Assay                 │   Precision │   Recall │   F1-Score │   Support │   TN │   FP │   FN │   TP │\n",
-            "╞═══════════════════════╪═════════════╪══════════╪════════════╪═══════════╪══════╪══════╪══════╪══════╡\n",
-            "│ Assay 1: NR.AhR       │      0.7097 │   0.3014 │     0.4231 │       610 │  528 │    9 │   51 │   22 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 2: NR.AR        │      0.6667 │   0.1667 │     0.2667 │       586 │  573 │    1 │   10 │    2 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 3: NR.AR.LBD    │      0      │   0      │     0      │       582 │  573 │    1 │    8 │    0 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 4: NR.Aromatase │      1      │   0.0513 │     0.0976 │       528 │  489 │    0 │   37 │    2 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 5: NR.ER        │      0.7333 │   0.2157 │     0.3333 │       516 │  461 │    4 │   40 │   11 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 6: NR.ER.LBD    │      0.5    │   0.15   │     0.2308 │       600 │  577 │    3 │   17 │    3 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 8: SR.ARE       │      0.6522 │   0.1613 │     0.2586 │       555 │  454 │    8 │   78 │   15 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 9: SR.ATAD5     │      1      │   0.0263 │     0.0513 │       622 │  584 │    0 │   37 │    1 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 10: SR.HSE      │      0.6    │   0.1364 │     0.2222 │       610 │  586 │    2 │   19 │    3 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 11: SR.MMP      │      0.5938 │   0.3167 │     0.413  │       543 │  470 │   13 │   41 │   19 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 12: SR.p53      │      0.6667 │   0.0488 │     0.0909 │       616 │  574 │    1 │   39 │    2 │\n",
-            "╘═══════════════════════╧═════════════╧══════════╧════════════╧═══════════╧══════╧══════╧══════╧══════╛\n",
+            "╒════════════════════════╤═════════════╤══════════╤════════════╤═══════════╤══════╤══════╤══════╤══════╕\n",
+            "│ Assay                  │   Precision │   Recall │   F1-Score │   Support │   TN │   FP │   FN │   TP │\n",
+            "╞════════════════════════╪═════════════╪══════════╪════════════╪═══════════╪══════╪══════╪══════╪══════╡\n",
+            "│ Assay 1: NR.AhR        │      0.7297 │   0.3699 │     0.4909 │       610 │  527 │   10 │   46 │   27 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 2: NR.AR         │      0.6667 │   0.1667 │     0.2667 │       586 │  573 │    1 │   10 │    2 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 3: NR.AR.LBD     │      0      │   0      │     0      │       582 │  573 │    1 │    8 │    0 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 4: NR.Aromatase  │      1      │   0.0256 │     0.05   │       528 │  489 │    0 │   38 │    1 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 5: NR.ER         │      0.7857 │   0.2157 │     0.3385 │       516 │  462 │    3 │   40 │   11 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 6: NR.ER.LBD     │      0.75   │   0.15   │     0.25   │       600 │  579 │    1 │   17 │    3 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 7: NR.PPAR.gamma │      0      │   0      │     0      │       605 │  573 │    1 │   31 │    0 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 8: SR.ARE        │      0.5769 │   0.1613 │     0.2521 │       555 │  451 │   11 │   78 │   15 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 9: SR.ATAD5      │      1      │   0.0263 │     0.0513 │       622 │  584 │    0 │   37 │    1 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 10: SR.HSE       │      0.5    │   0.0909 │     0.1538 │       610 │  586 │    2 │   20 │    2 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 11: SR.MMP       │      0.6389 │   0.3833 │     0.4792 │       543 │  470 │   13 │   37 │   23 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 12: SR.p53       │      0.5    │   0.0488 │     0.0889 │       616 │  573 │    2 │   39 │    2 │\n",
+            "╘════════════════════════╧═════════════╧══════════╧════════════╧═══════════╧══════╧══════╧══════╧══════╛\n",
             "\n",
             "╒══════════════╤═════════════╤══════════╤════════════╕\n",
             "│ Metric       │   Precision │   Recall │   F1-Score │\n",
             "╞══════════════╪═════════════╪══════════╪════════════╡\n",
-            "│ Macro Avg    │    0.647479 │ 0.143129 │   0.217044 │\n",
+            "│ Macro Avg    │     0.59566 │ 0.136541 │   0.201777 │\n",
             "├──────────────┼─────────────┼──────────┼────────────┤\n",
-            "│ Weighted Avg │    0.702444 │ 0.175055 │   0.260184 │\n",
+            "│ Weighted Avg │     0.64924 │ 0.178279 │   0.254961 │\n",
             "╘══════════════╧═════════════╧══════════╧════════════╛\n"
           ]
         }
@@ -141,11 +165,11 @@
         "    preds = rf.predict(x_te[rows_te])\n",
         "    true_labels = y_te[target][rows_te].values\n",
         "\n",
-        "    # Evaluate only if positives exist in both predictions and labels\n",
-        "    if np.sum(preds) == 0 and np.sum(true_labels) == 0:\n",
-        "        continue\n",
-        "    elif np.sum(preds) == 0 or np.sum(true_labels) == 0:\n",
-        "        continue\n",
+        "    # # Evaluate only if positives exist in both predictions and labels\n",
+        "    # if np.sum(preds) == 0 and np.sum(true_labels) == 0:\n",
+        "    #     continue\n",
+        "    # elif np.sum(preds) == 0 or np.sum(true_labels) == 0:\n",
+        "    #     continue\n",
         "\n",
         "    tn, fp, fn, tp = confusion_matrix(true_labels, preds).ravel()\n",
         "    support_1 = fn + tp\n",
