--- a/DC2_parallel_NN.ipynb
+++ b/DC2_parallel_NN.ipynb
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G0IySmYN00Nx",
-        "outputId": "9a9f87df-9986-4210-cc4a-324087a037f3"
+        "outputId": "52549d5b-bd4b-4019-a908-d39d1c6f9699"
       },
       "execution_count": 1,
       "outputs": [
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "o-K_5cmmh_DS"
       },
-      "execution_count": 60,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "EWx5LIqeE4vP"
       },
-      "execution_count": 61,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -153,9 +153,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EcWnwHQ05ax7",
-        "outputId": "0cec5932-18ff-4ce4-ca4b-b4e5143eaf14"
+        "outputId": "6c2267d0-a6f7-47ae-a904-e56bf9f4d4d3"
       },
-      "execution_count": 62,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,98 +165,98 @@
             "============================================================\n",
             "Training NN for assay 1: NR.AhR\n",
             "torch.Size([8441, 1])\n",
-            "Epoch 5/20 - Loss: 0.3544\n",
-            "Epoch 10/20 - Loss: 0.2858\n",
-            "Epoch 15/20 - Loss: 0.2464\n",
-            "Epoch 20/20 - Loss: 0.2322\n",
+            "Epoch 5/20 - Loss: 0.3824\n",
+            "Epoch 10/20 - Loss: 0.2991\n",
+            "Epoch 15/20 - Loss: 0.2588\n",
+            "Epoch 20/20 - Loss: 0.2378\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 2: NR.AR\n",
             "torch.Size([9654, 1])\n",
-            "Epoch 5/20 - Loss: 0.2871\n",
-            "Epoch 10/20 - Loss: 0.1480\n",
-            "Epoch 15/20 - Loss: 0.1404\n",
-            "Epoch 20/20 - Loss: 0.1346\n",
+            "Epoch 5/20 - Loss: 0.2651\n",
+            "Epoch 10/20 - Loss: 0.1419\n",
+            "Epoch 15/20 - Loss: 0.1378\n",
+            "Epoch 20/20 - Loss: 0.1306\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 3: NR.AR.LBD\n",
             "torch.Size([8852, 1])\n",
-            "Epoch 5/20 - Loss: 0.2866\n",
-            "Epoch 10/20 - Loss: 0.1364\n",
-            "Epoch 15/20 - Loss: 0.1296\n",
-            "Epoch 20/20 - Loss: 0.1212\n",
+            "Epoch 5/20 - Loss: 0.1968\n",
+            "Epoch 10/20 - Loss: 0.1229\n",
+            "Epoch 15/20 - Loss: 0.1208\n",
+            "Epoch 20/20 - Loss: 0.1087\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 4: NR.Aromatase\n",
             "torch.Size([7440, 1])\n",
-            "Epoch 5/20 - Loss: 0.3231\n",
-            "Epoch 10/20 - Loss: 0.1895\n",
-            "Epoch 15/20 - Loss: 0.1767\n",
-            "Epoch 20/20 - Loss: 0.1621\n",
+            "Epoch 5/20 - Loss: 0.3527\n",
+            "Epoch 10/20 - Loss: 0.1966\n",
+            "Epoch 15/20 - Loss: 0.1795\n",
+            "Epoch 20/20 - Loss: 0.1671\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 5: NR.ER\n",
             "torch.Size([7962, 1])\n",
-            "Epoch 5/20 - Loss: 0.4399\n",
-            "Epoch 10/20 - Loss: 0.3465\n",
-            "Epoch 15/20 - Loss: 0.3427\n",
-            "Epoch 20/20 - Loss: 0.3084\n",
+            "Epoch 5/20 - Loss: 0.3804\n",
+            "Epoch 10/20 - Loss: 0.3489\n",
+            "Epoch 15/20 - Loss: 0.3200\n",
+            "Epoch 20/20 - Loss: 0.2969\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 6: NR.ER.LBD\n",
             "torch.Size([9040, 1])\n",
-            "Epoch 5/20 - Loss: 0.2995\n",
-            "Epoch 10/20 - Loss: 0.1917\n",
-            "Epoch 15/20 - Loss: 0.1858\n",
-            "Epoch 20/20 - Loss: 0.1676\n",
+            "Epoch 5/20 - Loss: 0.2986\n",
+            "Epoch 10/20 - Loss: 0.1924\n",
+            "Epoch 15/20 - Loss: 0.1879\n",
+            "Epoch 20/20 - Loss: 0.1704\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 7: NR.PPAR.gamma\n",
             "torch.Size([8451, 1])\n",
-            "Epoch 5/20 - Loss: 0.3205\n",
-            "Epoch 10/20 - Loss: 0.1552\n",
-            "Epoch 15/20 - Loss: 0.1478\n",
-            "Epoch 20/20 - Loss: 0.1429\n",
+            "Epoch 5/20 - Loss: 0.3134\n",
+            "Epoch 10/20 - Loss: 0.1568\n",
+            "Epoch 15/20 - Loss: 0.1521\n",
+            "Epoch 20/20 - Loss: 0.1426\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 8: SR.ARE\n",
             "torch.Size([7401, 1])\n",
-            "Epoch 5/20 - Loss: 0.4285\n",
-            "Epoch 10/20 - Loss: 0.3960\n",
-            "Epoch 15/20 - Loss: 0.3516\n",
-            "Epoch 20/20 - Loss: 0.3383\n",
+            "Epoch 5/20 - Loss: 0.4525\n",
+            "Epoch 10/20 - Loss: 0.4003\n",
+            "Epoch 15/20 - Loss: 0.3593\n",
+            "Epoch 20/20 - Loss: 0.3365\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 9: SR.ATAD5\n",
             "torch.Size([9363, 1])\n",
-            "Epoch 5/20 - Loss: 0.3077\n",
-            "Epoch 10/20 - Loss: 0.1921\n",
-            "Epoch 15/20 - Loss: 0.1899\n",
-            "Epoch 20/20 - Loss: 0.1605\n",
+            "Epoch 5/20 - Loss: 0.2723\n",
+            "Epoch 10/20 - Loss: 0.1784\n",
+            "Epoch 15/20 - Loss: 0.1773\n",
+            "Epoch 20/20 - Loss: 0.1501\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 10: SR.HSE\n",
             "torch.Size([8417, 1])\n",
-            "Epoch 5/20 - Loss: 0.2546\n",
-            "Epoch 10/20 - Loss: 0.2231\n",
-            "Epoch 15/20 - Loss: 0.1915\n",
-            "Epoch 20/20 - Loss: 0.1667\n",
+            "Epoch 5/20 - Loss: 0.3715\n",
+            "Epoch 10/20 - Loss: 0.2246\n",
+            "Epoch 15/20 - Loss: 0.2320\n",
+            "Epoch 20/20 - Loss: 0.1922\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 11: SR.MMP\n",
             "torch.Size([7558, 1])\n",
-            "Epoch 5/20 - Loss: 0.3928\n",
-            "Epoch 10/20 - Loss: 0.3300\n",
-            "Epoch 15/20 - Loss: 0.2830\n",
+            "Epoch 5/20 - Loss: 0.4030\n",
+            "Epoch 10/20 - Loss: 0.3387\n",
+            "Epoch 15/20 - Loss: 0.2852\n",
             "Epoch 20/20 - Loss: 0.2613\n",
             "\n",
             "============================================================\n",
             "Training NN for assay 12: SR.p53\n",
             "torch.Size([8903, 1])\n",
-            "Epoch 5/20 - Loss: 0.3328\n",
-            "Epoch 10/20 - Loss: 0.2424\n",
-            "Epoch 15/20 - Loss: 0.2264\n",
-            "Epoch 20/20 - Loss: 0.1984\n"
+            "Epoch 5/20 - Loss: 0.3396\n",
+            "Epoch 10/20 - Loss: 0.2439\n",
+            "Epoch 15/20 - Loss: 0.2208\n",
+            "Epoch 20/20 - Loss: 0.1949\n"
           ]
         }
       ]
@@ -296,10 +296,10 @@
         "        probs = torch.sigmoid(logits).numpy()\n",
         "        preds = (probs >= threshold).astype(int)\n",
         "\n",
-        "    if np.sum(preds) == 0 and np.sum(Y_test) == 0:\n",
-        "        continue\n",
-        "    elif np.sum(preds) == 0 or np.sum(Y_test) == 0:\n",
-        "        continue\n",
+        "    # if np.sum(preds) == 0 and np.sum(Y_test) == 0:\n",
+        "    #     continue\n",
+        "    # elif np.sum(preds) == 0 or np.sum(Y_test) == 0:\n",
+        "    #     continue\n",
         "\n",
         "    # Confusion matrix\n",
         "    tn, fp, fn, tp = confusion_matrix(Y_test, preds).ravel()\n",
@@ -346,9 +346,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ub7mZEE5BtVT",
-        "outputId": "2c193e78-57b7-47d7-af61-5a162642b0f6"
+        "outputId": "6e8ba20f-2ab8-4c0c-dd3a-1f4b48d60952"
       },
-      "execution_count": 73,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,34 +358,40 @@
             "------------------------------------------------------------\n",
             "Final Classification Report for Selected Assays (Class 1 only):\n",
             "------------------------------------------------------------\n",
-            "╒═══════════════════════╤═════════════╤══════════╤════════════╤═══════════╤══════╤══════╤══════╤══════╕\n",
-            "│ Assay                 │   Precision │   Recall │   F1-Score │   Support │   TN │   FP │   FN │   TP │\n",
-            "╞═══════════════════════╪═════════════╪══════════╪════════════╪═══════════╪══════╪══════╪══════╪══════╡\n",
-            "│ Assay 1: NR.AhR       │      0.506  │   0.5753 │     0.5385 │       610 │  496 │   41 │   31 │   42 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 2: NR.AR        │      0.2    │   0.0833 │     0.1176 │       586 │  570 │    4 │   11 │    1 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 3: NR.AR.LBD    │      0.2    │   0.125  │     0.1538 │       582 │  570 │    4 │    7 │    1 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 4: NR.Aromatase │      1      │   0.0256 │     0.05   │       528 │  489 │    0 │   38 │    1 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 5: NR.ER        │      0.8889 │   0.1569 │     0.2667 │       516 │  464 │    1 │   43 │    8 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 6: NR.ER.LBD    │      1      │   0.1    │     0.1818 │       600 │  580 │    0 │   18 │    2 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 8: SR.ARE       │      0.5    │   0.2043 │     0.2901 │       555 │  443 │   19 │   74 │   19 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 10: SR.HSE      │      1      │   0.0455 │     0.087  │       610 │  588 │    0 │   21 │    1 │\n",
-            "├───────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
-            "│ Assay 11: SR.MMP      │      0.5079 │   0.5333 │     0.5203 │       543 │  452 │   31 │   28 │   32 │\n",
-            "╘═══════════════════════╧═════════════╧══════════╧════════════╧═══════════╧══════╧══════╧══════╧══════╛\n",
+            "╒════════════════════════╤═════════════╤══════════╤════════════╤═══════════╤══════╤══════╤══════╤══════╕\n",
+            "│ Assay                  │   Precision │   Recall │   F1-Score │   Support │   TN │   FP │   FN │   TP │\n",
+            "╞════════════════════════╪═════════════╪══════════╪════════════╪═══════════╪══════╪══════╪══════╪══════╡\n",
+            "│ Assay 1: NR.AhR        │      0.5238 │   0.6027 │     0.5605 │       610 │  497 │   40 │   29 │   44 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 2: NR.AR         │      0.125  │   0.0833 │     0.1    │       586 │  567 │    7 │   11 │    1 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 3: NR.AR.LBD     │      0.1429 │   0.125  │     0.1333 │       582 │  568 │    6 │    7 │    1 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 4: NR.Aromatase  │      1      │   0.0256 │     0.05   │       528 │  489 │    0 │   38 │    1 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 5: NR.ER         │      0.8333 │   0.1961 │     0.3175 │       516 │  463 │    2 │   41 │   10 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 6: NR.ER.LBD     │      0.6667 │   0.1    │     0.1739 │       600 │  579 │    1 │   18 │    2 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 7: NR.PPAR.gamma │      0      │   0      │     0      │       605 │  574 │    0 │   31 │    0 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 8: SR.ARE        │      0.4872 │   0.2043 │     0.2879 │       555 │  442 │   20 │   74 │   19 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 9: SR.ATAD5      │      0      │   0      │     0      │       622 │  584 │    0 │   38 │    0 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 10: SR.HSE       │      1      │   0.0455 │     0.087  │       610 │  588 │    0 │   21 │    1 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 11: SR.MMP       │      0.5079 │   0.5333 │     0.5203 │       543 │  452 │   31 │   28 │   32 │\n",
+            "├────────────────────────┼─────────────┼──────────┼────────────┼───────────┼──────┼──────┼──────┼──────┤\n",
+            "│ Assay 12: SR.p53       │      0      │   0      │     0      │       616 │  573 │    2 │   41 │    0 │\n",
+            "╘════════════════════════╧═════════════╧══════════╧════════════╧═══════════╧══════╧══════╧══════╧══════╛\n",
             "\n",
             "╒══════════════╤═════════════╤══════════╤════════════╕\n",
             "│ Metric       │   Precision │   Recall │   F1-Score │\n",
             "╞══════════════╪═════════════╪══════════╪════════════╡\n",
-            "│ Macro Avg    │    0.644761 │ 0.205474 │   0.245089 │\n",
+            "│ Macro Avg    │    0.440565 │ 0.159657 │   0.185865 │\n",
             "├──────────────┼─────────────┼──────────┼────────────┤\n",
-            "│ Weighted Avg │    0.646162 │ 0.283069 │   0.320757 │\n",
+            "│ Weighted Avg │    0.47848  │ 0.227459 │   0.255549 │\n",
             "╘══════════════╧═════════════╧══════════╧════════════╛\n"
           ]
         }
